	* add work-around for systems without fseeko() (such as Android)
	* add convenience header libtorrent/libtorrent.hpp
	* increase default max_allowed_in_request_queue
	* fix loading non-ascii filenames on windows with torrent_info constructor (2.0 regression)
	* add std::hash<> specialization for info_hash_t
	* fix integer overflow in hash_picker and properly restrict max file sizes in torrents
	* strengthen SSRF mitigation for web seeds

* 2.0.2 released

	* add v1() and v2() functions to torrent_info
	* fix piece_layers() to work for single-piece files
	* fix python binding regression in session constructor flags
	* fix unaligned piece requests in mmap_storage
	* improve client_data_t ergonomics
	* fix issue with concurrent access to part files

* 2.0.1 released

	* fix attribute in single-file v2 torrent creation
	* fix padding for empty files in v2 torrent creation
	* add function to ask a file_storage whether it's v2 or not
	* fix mtime field when creating single-file v2 torrents
	* fix performance regression in checking files
	* disable use of SetFileValidData() by default (windows). A new setting
	  allows enabling it

2.0 released

	* dropped depenency on iconv
	* deprecate set_file_hash() in torrent creator, as it's superceded by v2 torrents
	* deprecate mutable access to info_section in torrent_info
	* removed deprecated lazy_entry/lazy_bdecode
	* stats_alert deprecated
	* remove bittyrant choking algorithm
	* update userdata in add_torrent_params to be type-safe and add to torrent_handle
	* add ip_filter to session_params
	* added support for wolfSSL for SHA-1 hash and HTTPS (no Torrents over SSL)
	* requires OpenSSL minimum version 1.0.0 with SNI support
	* deprecated save_state() and load_state() on session in favour of new
	  write_session_params() and read_session_params()
	* added support for BitTorrent v2 (see docs/upgrade_to_2.0.html)
	* create_torrent() pad_file_limit parameter removed