@@ -86,7 +86,8 @@ namespace aux {
 
 using tracker_request_flags_t = flags::bitfield_flag<std::uint8_t, struct tracker_request_flags_tag>;
 
-// internal
+// Kinds of tracker announces. This is typically indicated as the ``&event=``
+// HTTP query string parameter to HTTP trackers.
 enum class event_t : std::uint8_t
 {
 	none,
