@@ -1,3 +1,4 @@
+	* add missing python binding for event_t
 	* add work-around for systems without fseeko() (such as Android)
 	* add convenience header libtorrent/libtorrent.hpp
 	* increase default max_allowed_in_request_queue
